[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Credits.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Impact.wav" type="AudioStream" id=2]
[ext_resource path="res://Fonts/DefaultFont.tres" type="DynamicFont" id=3]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextDialog" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NextCharacter" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.962

[connection signal="timeout" from="NextDialog" to="." method="_on_NextDialog_timeout"]
[connection signal="timeout" from="NextCharacter" to="." method="_on_NextCharacter_timeout"]
